# Snake_she

./: .gitignore  CMakeLists.txt  build.sh  run.sh
include/: core.hpp  game.hpp  tool.hpp
src/: game_pri_draw.cpp  game_pri_logic.cpp  game_pub.cpp  main.cpp
